# cargo-thank-you-stars

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  crates_io.rs  errors.rs  github.rs  lockfile.rs  main.rs
