[package]
name = "cargo-thank-you-stars"
version = "0.1.0"
authors = ["woxtu <woxtup@gmail.com>"]
description = "Give your dependencies stars on GitHub!"
repository = "https://github.com/woxtu/cargo-thank-you-stars"
license = "MIT"

[dependencies]
error-chain = "0.12"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
url = "1.7"
